fixed bad visibility of the text of the authentication page

--- a/assets/css/authentification.css
+++ b/assets/css/authentification.css
@@ -12,7 +12,7 @@ body, html {
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
-    background: linear-gradient(0deg, rgb(7, 30, 83, 1), rgb(21, 192, 237, 0.5)), url(../img/mozaic.jpg) fixed center center repeat;
+    background: linear-gradient(rgb(7, 30, 83, 1), rgb(21, 192, 237, 0.5)), url(../img/mozaic.jpg) fixed center center repeat;
 }
 
 .unselectable {
